selection refactor